2007-11-12  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/binfile.h: Fixed invalid cast from bool to enum

	The Apple's g++3.3 compiler from Mac Developer Tools v1.2 reports
	an error on a static cast from bool to enum. This patch changes
	the problematic code, so it should be accepted by older compilers.

2007-11-02  Adam Piatyszek  <ediap@users.sourceforge.net>

	* Makefile.am, configure.ac.in: Save configuration summary to
	config_summary.log file

	* configure.ac.in, itpp-config.in, itpp.pc.in: Improved
	itpp-config and itpp.pc scripts

	This patch adds an additional configure check to see whether
	external libraries' dependencies need to be explicitly added to
	the output of "itpp-config --libs" command. As a result it should
	be always possible to use "itpp-config --libs" or "pkg-config itpp
	--libs" without adding an extra --static switch. Besides,
	"itpp-config --libs" should now return exactly the same libraries
	as "pkg-config itpp --libs" on Mac OS X.

	* doc/tutorial/src/mimoconv.cpp: Updated MIMO with convolutional
	coding example program

2007-11-01  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* doc/local/installation.doc: Updated the "no root" installation
	description

2007-10-30  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/mat.h: operator*(Vec &v, Mat &m) documented as
	deprecated

	The existence of this operator in IT++ is questionable, since its
	behaviour is equivalent to "outer_product(v, m.get_row(0))".
	Moreover, the documentation was wrong so many users had problems
	using it correctly. This patch marks this operator as deprecated,
	both in the documentation and through a run-time warning message.

2007-10-25  Adam Piatyszek  <ediap@users.sourceforge.net>

	* AUTHORS, doc/local/authors.doc: List of authors updated

	* configure.ac.in: Do not use "-Werror" flag for debugging library
	by default

	This flag was propagated into itpp-config and itpp.pc scripts and